--- a/src/price.html
+++ b/src/price.html
@@ -7,11 +7,25 @@
   <title>Цены</title>
 </head>
 <body>
-  <header class="page-header">Окна</header>
   <div class="container">
+    <header class="page-header">
+      <div class="content-block">
+        <div class="header-top">
+          <a href="/" class="logo"><img src="./img/logo.png" alt="logo"></a>
+          <div class="row">
+            <div class="col-md-3 col-md-offset-6"><a href="#">Рассчитать стоимость</a></div>
+            <div class="col-md-3">
+              <div class="contacts">
+                <span class="contacts-time">с 9 до 21 без выходных</span>
+                <span class="contacts-phone">+7 495 534-65-33</span>
+              </div>
+        </div>
+        </div>
+      </div>
+    </header>
     <aside></aside>
     <main></main>
+    <footer class="page-footer"></footer>
   </div>
-  <footer class="page-footer"></footer>
 </body>
 </html>
