--- a/src/price.html
+++ b/src/price.html
@@ -19,13 +19,97 @@
                 <span class="contacts-time">с 9 до 21 без выходных</span>
                 <span class="contacts-phone">+7 495 534-65-33</span>
               </div>
-        </div>
+            </div>
+          </div>
         </div>
       </div>
+      <nav class="page-nav"></nav>
     </header>
-    <aside></aside>
-    <main></main>
-    <footer class="page-footer"></footer>
+    <h1>Цветные пластиковые окна</h1>
+    <div>Ламинируем профиль ПВХ для предания окнам цвета и фактуры дерева</div>
+    <div class="row">
+      <div class="col-md-2">
+        <aside class="content-block">
+          Рекомендуем также
+          <ul class="">
+            <li><a href="#">Edinburgh by REHAU</a></li>
+            <li><a href="#">Estet by REHAU</a></li>
+            <li><a href="#">REHAU DELIGHT-Design</a></li>
+            <li><a href="#">REHAU BRILLANT-Design</a></li>
+            <li><a href="#"> Geneo
+            <li><a href="#">Цветные окна</a></li>
+            <li><a href="#">Стеклопакеты</a></li>
+            <li><a href="#">Остекление балконов и лоджий</a></li>
+            <li><a href="#">Отделка и утепление балконов</a></li>
+            <li><a href="#">Балконные блоки</a></li>
+          </ul>
+        </aside>
+      </div>
+      <div class="col-md-10">
+        <div class="content-block">
+          <div class="">Создайте выразительный интерьер с цветными окнами REHAU</div>
+          <figure>
+            <img src="img/irish-oak-big.png" alt="ирландский дуб">
+            <figcaption>Ирландский дуб</figcaption>
+          </figure>
+          <ul class="features">
+            <li>Точная визуализация натурального дерева.</li>
+            <li>Яркие нестандартные цвета в тон или в дополнение интерьера.</li>
+            <li>Разные фактуры для Ваших пластиковых окон.</li>
+          </ul>
+          Подберите цвет для своих окон:
+          <ul></ul>
+          <p>Больше 50 вариантов  цветов и фактур спрашивайте у наших замерщиков</p>
+          <button>Рассчитать со скидкой 70%</button>
+          <a href="#">или отправить заявку и получить консультацию</a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="info content-block"></div>
+      <div class="col-md-10 col-md-offset-2">
+        <h3>Зачем использовать ламинацию</h3>
+        <ul>
+          <li>
+            Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют
+            ламинацию – приём, при помощи которого можно декорировать своё жилье с учетом самых
+            современных веяний дизайнерского искусства.
+          </li>
+          <li>
+            При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести
+            оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева,
+            точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку
+            самых разных цветов и фактур.
+          </li>
+        </ul>
+        <h3>Как окна становятся цветными?</h3>
+        <ol>
+          <li>
+            Собственно, процесс ламинации профиля ПВХ состоит в процедуре нанесения на его поверхность декоративных
+            высокопрочных плёнок с применением специального клея и ламинирующих установок.
+          </li>
+          <li>
+            Плёнку прочно соединяют с профилем. При этом внешней стороне пленки свойственна высокая стойкость к повреждениям.
+            В частности, цветное пластиковое окно, прошедшее процесс ламинации, стойко переносит температурные
+            колебания в диапазоне от -80°С до +130°С, оно исключительно стойко к солнечному излучению.
+          </li>
+          <li>
+            Пластиковые окна, прошедшие процесс ламинации профилей, имеют срок службы гораздо больший, чем не ламинированные окна.
+            В сравнении с окнами из массива дерева, они значительно дешевле.
+          </li>
+        </ol>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-2">
+        <h3>Отзывы о цветных пластиковых окнах</h3>
+        <a href="#">посмотреть еще отзывы</a>
+      </div>
+    </div>
+    <footer class="page-footer">
+      <nav class="page-nav"></nav>
+    </footer>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
