--- a/src/price.html
+++ b/src/price.html
@@ -46,68 +46,58 @@
         </aside>
       </div>
       <div class="col-md-10">
-        <div class="content-block">
-          <div class="">Создайте выразительный интерьер с цветными окнами REHAU</div>
-          <figure>
-            <img src="img/irish-oak-big.png" alt="ирландский дуб">
-            <figcaption>Ирландский дуб</figcaption>
-          </figure>
-          <ul class="features">
-            <li>Точная визуализация натурального дерева.</li>
-            <li>Яркие нестандартные цвета в тон или в дополнение интерьера.</li>
-            <li>Разные фактуры для Ваших пластиковых окон.</li>
-          </ul>
-          Подберите цвет для своих окон:
-          <ul></ul>
-          <p>Больше 50 вариантов  цветов и фактур спрашивайте у наших замерщиков</p>
-          <button>Рассчитать со скидкой 70%</button>
-          <a href="#">или отправить заявку и получить консультацию</a>
-        </div>
+        <div id="choice" class="content-block"></div>
       </div>
     </div>
     <div class="row">
-      <div class="info content-block"></div>
       <div class="col-md-10 col-md-offset-2">
-        <h3>Зачем использовать ламинацию</h3>
-        <ul>
-          <li>
-            Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют
-            ламинацию – приём, при помощи которого можно декорировать своё жилье с учетом самых
-            современных веяний дизайнерского искусства.
-          </li>
-          <li>
-            При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести
-            оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева,
-            точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку
-            самых разных цветов и фактур.
-          </li>
-        </ul>
-        <h3>Как окна становятся цветными?</h3>
-        <ol>
-          <li>
-            Собственно, процесс ламинации профиля ПВХ состоит в процедуре нанесения на его поверхность декоративных
-            высокопрочных плёнок с применением специального клея и ламинирующих установок.
-          </li>
-          <li>
-            Плёнку прочно соединяют с профилем. При этом внешней стороне пленки свойственна высокая стойкость к повреждениям.
-            В частности, цветное пластиковое окно, прошедшее процесс ламинации, стойко переносит температурные
-            колебания в диапазоне от -80°С до +130°С, оно исключительно стойко к солнечному излучению.
-          </li>
-          <li>
-            Пластиковые окна, прошедшие процесс ламинации профилей, имеют срок службы гораздо больший, чем не ламинированные окна.
-            В сравнении с окнами из массива дерева, они значительно дешевле.
-          </li>
-        </ol>
+        <div class="info content-block">
+          <h3>Зачем использовать ламинацию</h3>
+          <ul>
+            <li>
+              Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют
+              ламинацию – приём, при помощи которого можно декорировать своё жилье с учетом самых
+              современных веяний дизайнерского искусства.
+            </li>
+            <li>
+              При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести
+              оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева,
+              точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку
+              самых разных цветов и фактур.
+            </li>
+          </ul>
+          <h3>Как окна становятся цветными?</h3>
+          <ol>
+            <li>
+              Собственно, процесс ламинации профиля ПВХ состоит в процедуре нанесения на его поверхность декоративных
+              высокопрочных плёнок с применением специального клея и ламинирующих установок.
+            </li>
+            <li>
+              Плёнку прочно соединяют с профилем. При этом внешней стороне пленки свойственна высокая стойкость к повреждениям.
+              В частности, цветное пластиковое окно, прошедшее процесс ламинации, стойко переносит температурные
+              колебания в диапазоне от -80°С до +130°С, оно исключительно стойко к солнечному излучению.
+            </li>
+            <li>
+              Пластиковые окна, прошедшие процесс ламинации профилей, имеют срок службы гораздо больший, чем не ламинированные окна.
+              В сравнении с окнами из массива дерева, они значительно дешевле.
+            </li>
+          </ol>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <h3>Отзывы о цветных пластиковых окнах</h3>
         <a href="#">посмотреть еще отзывы</a>
+        <div id="reviews" class="content-block"></div>
       </div>
     </div>
     <footer class="page-footer">
       <nav class="page-nav"></nav>
+      <div class="contacts">
+        Тел.: <span class="contacts-phone">+7 495 534-65-33</span> (многоканальный)<br>
+        E-mail: <a>order@oknapolis.ru</a>
+      </div>
     </footer>
   </div>
   <script src="js/main.js"></script>
