--- a/src/price.html
+++ b/src/price.html
@@ -13,11 +13,13 @@
         <div class="header-top">
           <a href="/" class="logo"><img src="./img/logo.png" alt="logo"></a>
           <div class="row">
-            <div class="col-md-3 col-md-offset-6"><a href="#">Рассчитать стоимость</a></div>
-            <div class="col-md-3">
-              <div class="contacts">
-                <span class="contacts-time">с 9 до 21 без выходных</span>
-                <span class="contacts-phone">+7 495 534-65-33</span>
+            <div class="col-md-5 col-md-offset-5">
+              <div class="wrapper">
+                <a href="#">Рассчитать стоимость</a>
+                <div class="contacts">
+                  <span class="contacts-time">с 9 до 21 без выходных</span>
+                  <span class="contacts-phone">+7 495 534-65-33</span>
+                </div>
               </div>
             </div>
           </div>
@@ -31,12 +33,12 @@
       <div class="col-md-2">
         <aside class="content-block">
           Рекомендуем также
-          <ul class="">
+          <ul class="service-list">
             <li><a href="#">Edinburgh by REHAU</a></li>
-            <li><a href="#">Estet by REHAU</a></li>
+            <li><a href="#" class="active">Estet by REHAU</a></li>
             <li><a href="#">REHAU DELIGHT-Design</a></li>
             <li><a href="#">REHAU BRILLANT-Design</a></li>
-            <li><a href="#"> Geneo
+            <li><a href="#">REHAU Geneo</a></li>
             <li><a href="#">Цветные окна</a></li>
             <li><a href="#">Стеклопакеты</a></li>
             <li><a href="#">Остекление балконов и лоджий</a></li>
@@ -45,14 +47,14 @@
           </ul>
         </aside>
       </div>
-      <div class="col-md-10">
+      <div class="col-md-8">
         <div id="choice" class="content-block"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-10 col-md-offset-2">
+      <div class="col-md-8 col-md-offset-2">
         <div class="info content-block">
-          <h3>Зачем использовать ламинацию</h3>
+          <h2>Зачем использовать ламинацию</h2>
           <ul>
             <li>
               Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют
@@ -66,7 +68,7 @@
               самых разных цветов и фактур.
             </li>
           </ul>
-          <h3>Как окна становятся цветными?</h3>
+          <h2>Как окна становятся цветными?</h2>
           <ol>
             <li>
               Собственно, процесс ламинации профиля ПВХ состоит в процедуре нанесения на его поверхность декоративных
@@ -86,7 +88,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-10 col-md-offset-2">
+      <div class="col-md-8 col-md-offset-2">
         <h3>Отзывы о цветных пластиковых окнах</h3>
         <a href="#">посмотреть еще отзывы</a>
         <div id="reviews" class="content-block"></div>
