--- a/src/price.html
+++ b/src/price.html
@@ -55,13 +55,15 @@
       <div class="col-md-8 col-md-offset-2">
         <div class="info content-block">
           <h2>Зачем использовать ламинацию</h2>
-          <ul>
+          <ul class="list-unstyled">
             <li>
+              <img src="../img/lam.svg" alt="ламинат">
               Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют
               ламинацию – приём, при помощи которого можно декорировать своё жилье с учетом самых
               современных веяний дизайнерского искусства.
             </li>
             <li>
+              <img src="../img/tree.svg" alt="дерево">
               При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести
               оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева,
               точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку
@@ -69,7 +71,7 @@
             </li>
           </ul>
           <h2>Как окна становятся цветными?</h2>
-          <ol>
+          <ol class="list-unstyled">
             <li>
               Собственно, процесс ламинации профиля ПВХ состоит в процедуре нанесения на его поверхность декоративных
               высокопрочных плёнок с применением специального клея и ламинирующих установок.
@@ -94,14 +96,17 @@
         <div id="reviews" class="content-block"></div>
       </div>
     </div>
+  </div>
     <footer class="page-footer">
-      <nav class="page-nav"></nav>
-      <div class="contacts">
-        Тел.: <span class="contacts-phone">+7 495 534-65-33</span> (многоканальный)<br>
-        E-mail: <a>order@oknapolis.ru</a>
+      <div class="container">
+        <nav class="page-nav"></nav>
+        <div class="contacts">
+          Тел.: <span class="contacts-phone">+7 495 534-65-33</span> (многоканальный)<br>
+          E-mail: <a>order@oknapolis.ru</a>
+        </div>
       </div>
     </footer>
-  </div>
+
   <script src="js/main.js"></script>
 </body>
 </html>
